Switchover to BOOTSTRA.386

--- a/about.html
+++ b/about.html
@@ -4,16 +4,44 @@
 
 <head>
 <title>Ming Y. Chow - Personal Information</title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="Ming Chow's home page: personal information" />
 <meta name="keywords" content="ming chow, computer science, engineering, game development, web development, security, tufts university, MBTA" />
 <meta name="robots" content="index,follow" />
-<link rel="stylesheet" href="css/default.css" type="text/css" />
+<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+<link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" />
+<link rel="stylesheet" href="css/addendum.css" type="text/css" />
 </head>
 
 <body>
-<h2>Ming Y. Chow - Personal Information</h2>
+<div class="navbar navbar-inverse navbar-fixed-top">
+<div class="navbar-inner">
+<div class="container">
+<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
+<a class="brand">Ming Y. Chow</a>
+<div class="nav-collapse collapse">
+<ul class="nav">
+<li><a href="index.html">Home</a></li>
+<li class="active"><a href="#">About</a></li>
+<li><a href="courses.html">Courses @ Tufts</a></li>
+<li><a href="cv.pdf">CV</a></li>
+<li><a href="faq.html">FAQ</a></li>
+<li><a href="projects.html">Projects</a></li>
+<li><a href="talks/">Talks</a></li>
+<li><a href="mailto:mchow@cs.tufts.edu">Email</a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+
+<div class="container">
+<h2>Personal Information</h2>
 
 <h3>Early Life and Education</h3>
 <p>I was born in Boston, Massachusetts. I spent most of my childhood in Medford, MA and later moved to Saugus, MA.  I graduated from Saugus High School in 1998.</p>
@@ -27,17 +55,9 @@
 <h3>Favorite Sport Teams</h3>
 <p>I have been following Manchester United F.C. since I was in high school (1995).  Ditto for the Miami Hurricanes and the Fighting Irish of Notre Dame in college football.  I also follow the New England Patriots and the Boston Celtics closely.</p>
 
-<div id="networks">
-<p>
-<a href="https://github.com/mchow01" target="_blank"><img src="images/github.png" alt="GitHub" width="32" height="32" /></a>
-<a href="http://www.linkedin.com/in/mchow01" target="_blank"><img src="images/linkedin.png" alt="LinkedIn" width="38" height="32" /></a>
-<a href="http://www.twitter.com/0xmchow" target="_blank"><img src="images/twitter.png" alt="Twitter" width="32" height="32" /></a>
-</p>
-</div>
-<div id="footer">
-<p>About | <a href="courses.html">Courses @ Tufts</a> | <a href="cv.pdf">CV</a> | <a href="faq.html">FAQ</a> | <a href="projects.html">Projects</a> | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
 </div>
 
+<script src="js/bootstrap.min.js"></script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
