--- a/faq.html
+++ b/faq.html
@@ -3,19 +3,46 @@
 <html>
 <head>
 <title>Ming Y. Chow - Frequently Asked Questions</title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="Ming Chow's home page: frequently asked questions" />
 <meta name="keywords" content="ming chow, computer science, engineering, game development, web development, security, tufts university, MBTA" />
 <meta name="robots" content="index,follow" />
-<link rel="stylesheet" href="css/default.css" type="text/css" />
-<link rel="alternate" type="application/rss+xml" href="https://twitter.com/statuses/user_timeline/41035489.rss" />
+<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+<link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" />
+<link rel="stylesheet" href="css/addendum.css" type="text/css" />
 </head>
 
 <body>
-<h2>Ming Y. Chow - Frequently Asked Questions</h2>
+<div class="navbar navbar-inverse navbar-fixed-top">
+<div class="navbar-inner">
+<div class="container">
+<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
+<a class="brand">Ming Y. Chow</a>
+<div class="nav-collapse collapse">
+<ul class="nav">
+<li><a href="index.html">Home</a></li>
+<li><a href="about.html">About</a></li>
+<li><a href="courses.html">Courses @ Tufts</a></li>
+<li><a href="cv.pdf">CV</a></li>
+<li class="active"><a href="#">FAQ</a></li>
+<li><a href="projects.html">Projects</a></li>
+<li><a href="talks/">Talks</a></li>
+<li><a href="mailto:mchow@cs.tufts.edu">Email</a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 
-<h4 id="interviewing">Can you give me some tips on preparing for a technical job interview?  Do you also have a list of typical interview questions?</h4>
+<div class="container">
+<h2>Frequently Asked Questions</h2>
+
+<h3 id="interviewing">Can you give me some tips on preparing for a technical job interview?  Do you also have a list of typical interview questions?</h3>
 
 <p>First things first, be yourself.  Here are some questions I, and many good interviewers, will ask:</p>
 
@@ -47,11 +74,11 @@
 
 <p>If you want more technical job interview questions and preparation, a friend and dear colleague, Robin Kahan, provided this: <a href="http://courses.csail.mit.edu/iap/interview/materials.php" target="_blank">http://courses.csail.mit.edu/iap/interview/materials.php</a></p>
 
-<h4 id="hire">How do you hire?</h4>
+<h3 id="hire">How do you hire?</h3>
 <p>Personality is paramount.  Personality will send you very far in life. Your academic or engineering prowness may get you the job but your personality and soft-skills will get you the promotion.  Working with jerks is poisonous, enough said.  I also look for passion and the abilities to listen and learn quickly.</p>
 <p>I cannot emphasize this enough but your first impression is critical.  In fact, I can determine if I will hire you within the first 2 - 5 minutes. Many years ago (2006 that is), I was looking for a web development intern.  A young man was referred to me by the director of HR at where I worked.  I will never forget the young man's magnetic personality when he walked through the front door when I greeted him. During the interview, I realized that he didn't have the educational background nor the entire skillset I wanted.  But I could easily tell that he was really excited about web design and development, and was eager to learn what was necessary.  So I took a chance on him. It turned out that he would be the best person I've hired and perhaps will ever hire.  An extra bonus that the man had the ability to speak to a greater community, audience.  That young man was named Chris Traganos, now a Head of Developer Outreach and Senior Web Developer at Evernote.</p>
 
-<h4 id="companies">Can you tell me where your former students took jobs at after graduation?</h4>
+<h3 id="companies">Can you tell me where your former students took jobs at after graduation?</h3>
 <p>Sure, this is pretty easy for me to do.  I keep in contact with many of them and I also maintain the <a href="https://www.linkedin.com/groups/Tufts-University-Computer-Science-Alumni-3728282/about" target="_blank">Tufts University Computer Science Alumni Group on LinkedIn</a>.  So here is a list of some of the companies where my students have took jobs at (note: names withheld for obvious reasons):</p>
 <ul>
 <li>Amazon</li>
@@ -79,20 +106,12 @@
 <li>Vlingo (now Nuance)</li>
 </ul>
 
-<h4>How did you get in computer security?</h4>
+<h3>How did you get in computer security?</h3>
 <p>I took a course on software security with <a href="http://www.cigital.com/~gem/" target="_blank">Gary McGraw</a> at the USENIX Annual Conference in Boston in 2004.  I was also inspired by Professor Ed Felten (Princeton) at the same conference.</p>
 
-<div id="networks">
-<p>
-<a href="https://github.com/mchow01" target="_blank"><img src="images/github.png" alt="GitHub" width="32" height="32" /></a>
-<a href="http://www.linkedin.com/in/mchow01" target="_blank"><img src="images/linkedin.png" alt="LinkedIn" width="38" height="32" /></a>
-<a href="http://www.twitter.com/0xmchow" target="_blank"><img src="images/twitter.png" alt="Twitter" width="32" height="32" /></a>
-</p>
-</div>
-<div id="footer">
-<p><a href="about.html">About</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="cv.pdf">CV</a> | FAQ | <a href="projects.html">Projects</a> | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
 </div>
 
+<script src="js/bootstrap.min.js"></script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
