--- a/courses.html
+++ b/courses.html
@@ -3,17 +3,44 @@
 <html>
 <head>
 <title>Ming Y. Chow - Courses @ Tufts</title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="Ming Chow's home page: courses at Tufts Department of Computer Science" />
 <meta name="keywords" content="ming chow, computer science, engineering, game development, web development, security, tufts university, MBTA" />
 <meta name="robots" content="index,follow" />
-<link rel="stylesheet" href="css/default.css" type="text/css" />
-<link rel="alternate" type="application/rss+xml" href="https://twitter.com/statuses/user_timeline/41035489.rss" />
+<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+<link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" />
+<link rel="stylesheet" href="css/addendum.css" type="text/css" />
 </head>
 
 <body>
-<h2>Ming Y. Chow - Courses @ Tufts</h2>
+<div class="navbar navbar-inverse navbar-fixed-top">
+<div class="navbar-inner">
+<div class="container">
+<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
+<a class="brand">Ming Y. Chow</a>
+<div class="nav-collapse collapse">
+<ul class="nav">
+<li><a href="index.html">Home</a></li>
+<li><a href="about.html">About</a></li>
+<li class="active"><a href="#">Courses @ Tufts</a></li>
+<li><a href="cv.pdf">CV</a></li>
+<li><a href="faq.html">FAQ</a></li>
+<li><a href="projects.html">Projects</a></li>
+<li><a href="talks/">Talks</a></li>
+<li><a href="mailto:mchow@cs.tufts.edu">Email</a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+
+<div class="container">
+<h2>Courses @ Tufts</h2>
 
 <h3>Spring 2014</h3>
 <ul>
@@ -256,17 +283,9 @@
 </li>
 </ul>
 
-<div id="networks">
-<p>
-<a href="https://github.com/mchow01" target="_blank"><img src="images/github.png" alt="GitHub" width="32" height="32" /></a>
-<a href="http://www.linkedin.com/in/mchow01" target="_blank"><img src="images/linkedin.png" alt="LinkedIn" width="38" height="32" /></a>
-<a href="http://www.twitter.com/0xmchow" target="_blank"><img src="images/twitter.png" alt="Twitter" width="32" height="32" /></a>
-</p>
-</div>
-<div id="footer">
-<p><a href="about.html">About</a> | Courses @ Tufts | <a href="cv.pdf">CV</a> | <a href="faq.html">FAQ</a> | <a href="projects.html">Projects</a> | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
 </div>
 
+<script src="js/bootstrap.min.js"></script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
