--- a/index.html
+++ b/index.html
@@ -3,30 +3,41 @@
 <html>
 <head>
 <title>Ming Y. Chow</title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="Ming Chow's home page" />
 <meta name="keywords" content="ming chow, computer science, engineering, game development, web development, security, tufts university, MBTA" />
 <meta name="robots" content="index,follow" />
 <meta name="google-site-verification" content="NkkfQ8bOtWGA0T3CSg_6ACDZNMWoeVI7nwT-Agt5Lss" />
-<link rel="stylesheet" href="css/default.css" type="text/css" />
+<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+<link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" />
+<link rel="stylesheet" href="css/jumbotron.css" type="text/css" />
 </head>
 
 <body>
-<div id="home">
-<h2>Ming Y. Chow</h2>
-<div id="networks">
-<p>
-<a href="https://github.com/mchow01" target="_blank"><img src="images/github.png" alt="GitHub" width="32" height="32" /></a>
-<a href="http://www.linkedin.com/in/mchow01" target="_blank"><img src="images/linkedin.png" alt="LinkedIn" width="38" height="32" /></a>
-<a href="http://www.twitter.com/0xmchow" target="_blank"><img src="images/twitter.png" alt="Twitter" width="32" height="32" /></a>
-</p>
+<div class="container-narrow">
+<div class="masthead">
+<ul class="nav nav-pills pull-left">
+<li class="active"><a href="#">Home</a></li>
+<li><a href="about.html">About</a></li>
+<li><a href="courses.html">Courses @ Tufts</a></li>
+<li><a href="cv.pdf">CV</a></li>
+<li><a href="faq.html">FAQ</a></li>
+<li><a href="projects.html">Projects</a></li>
+<li><a href="talks/">Talks</a></li>
+<li><a href="mailto:mchow@cs.tufts.edu">Email</a></li>
+</ul>
 </div>
-<div id="footer">
-<p><a href="about.html">About</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="cv.pdf">CV</a> | <a href="faq.html">FAQ</a> | <a href="projects.html">Projects</a> | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
+<hr/>
+<div class="jumbotron">
+<h1>Ming Y. Chow</h1>
+<p></p>
+<p><a href="https://github.com/mchow01" class="btn btn-primary btn-large">GitHub</a> <a href="https://www.linkedin.com/in/mchow01" class="btn btn-primary btn-large">LinkedIn</a> <a href="https://www.twitter.com/0xmchow" class="btn btn-primary btn-large">Twitter</a></p>
 </div>
+<hr/>
 </div>
 
+<script src="js/bootstrap.min.js"></script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
