Added missing target="_blank" to links

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="jumbotron">
 <h1>Ming Y. Chow</h1>
 <p></p>
-<p><a href="https://github.com/mchow01" class="btn btn-primary btn-large">GitHub</a> <a href="https://www.linkedin.com/in/mchow01" class="btn btn-primary btn-large">LinkedIn</a> <a href="https://www.twitter.com/0xmchow" class="btn btn-primary btn-large">Twitter</a></p>
+<p><a href="https://github.com/mchow01" class="btn btn-primary btn-large" target="_blank">GitHub</a> <a href="https://www.linkedin.com/in/mchow01" class="btn btn-primary btn-large" target="_blank">LinkedIn</a> <a href="https://www.twitter.com/0xmchow" class="btn btn-primary btn-large" target="_blank">Twitter</a></p>
 </div>
 <hr/>
 </div>
