--- a/courses.html
+++ b/courses.html
@@ -41,6 +41,30 @@
 
 <div class="container">
 <h2>Courses @ Tufts</h2>
+<h3>Fall 2014</h3>
+<ul>
+<li><a href="http://www.cs.tufts.edu/comp/20/" target="_blank">COMP 20: Web Programming</a>
+<ul>
+	<li>Enrollment (number of students): ___</li>
+	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 72 responses): / 5.0</li> <!-- question 15 -->
+</ul>	
+</li>
+<li><a href="http://tuftsdev.github.io/MobileMedicalDevices/" target="_blank">COMP 50-MMD: Mobile Medical Devices (cross-listed with Electrical Engineering)</a>
+<ul>
+	<li>Enrollment (number of students): ___</li>
+	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 27 responses): / 5.0</li> <!-- question 15 -->
+</ul>	
+</li>
+<li><a href="http://www.cs.tufts.edu/comp/116/" target="_blank">COMP 116: Introduction to Computer Security</a>
+<ul>
+	<li>Enrollment (number of students): ___</li>
+	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 16 responses): ___ / 5.0</li> <!-- question 15 -->
+</ul>	
+</li>
+</ul>
 
 <h3>Spring 2014</h3>
 <ul>
