Added BSMCon 3 talk

--- a/talks/index.html
+++ b/talks/index.html
@@ -42,6 +42,8 @@
 <div class="container">
 <h2>Talks</h2>
 
+<p><a href="bsmcon3-mchow.pdf">A Growing Mongo Problem!</a>. Boston Security Conference #3, Microsoft New England Research and Development Center, Cambridge, MA, October 20, 2014.</p>
+
 <p>Information Security Careers &amp; Education Panel (with Rob Cheyne, Paul Asadoorian, Roy Wattanasin, and Mark Knowlton). BSides Boston Security Conference, Microsoft New England Research and Development Center, Cambridge, MA, May 10, 2014. <iframe width="560" height="315" src="http://www.youtube.com/embed/GTt3qvdTexM" frameborder="0" allowfullscreen></iframe></p>
 
 <p><a href="AbusingMobileGames.pdf">Abusing Mobile Games</a>. BSides Boston Security Conference, Microsoft New England Research and Development Center, Cambridge, MA, May 10, 2014. <iframe width="560" height="315" src="http://www.youtube.com/embed/JsGUiGXlNnc" frameborder="0" allowfullscreen></iframe></p>
