Added links to download app for iOS and Android

--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,8 @@
 <ul>
 	<li>iOS app source code: <a href="https://github.com/mchow01/MATransit-iOS" target="_blank">https://github.com/mchow01/MATransit-iOS</a></li>
 	<li>Android app source code: <a href="https://github.com/mchow01/MATransit-Android" target="_blank">https://github.com/mchow01/MATransit-Android</a></li>
+  <li><a href="https://itunes.apple.com/us/app/matransit/id653572142?mt=8" target="_blank">App on iTunes App Store</a></li>
+  <li><a href="https://play.google.com/store/apps/details?id=edu.tufts.cs.mchow.matransit&amp;hl=en" target="_blank">App on Google Play</a></li>
 </ul>
 
 </div>
