Updated courses page

--- a/courses.html
+++ b/courses.html
@@ -41,7 +41,7 @@
 
 <div class="container">
 <h2>Courses @ Tufts</h2>
-<h3>Fall 2014</h3>
+<h3>Spring 2015</h3>
 <ul>
 <li><a href="http://www.cs.tufts.edu/comp/20/" target="_blank">COMP 20: Web Programming</a>
 <ul>
@@ -50,16 +50,41 @@
 	<li>Overall Performance of Instructor (of 72 responses): / 5.0</li> <!-- question 15 -->
 </ul>	
 </li>
-<li><a href="http://tuftsdev.github.io/MobileMedicalDevices/" target="_blank">COMP 50-MMD: Mobile Medical Devices (cross-listed with Electrical Engineering)</a>
+<li><a href="http://www.cs.tufts.edu/comp/120/" target="_blank">COMP 120: Web Engineering</a>
+<ul>
+	<li>Enrollment (number of students): 20</li>
+	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 27 responses): / 5.0</li> <!-- question 15 -->
+</ul>	
+</li>
+<li><a href="http://www.cs.tufts.edu/comp/150ISW/" target="_blank">COMP 150-ISW: Music Apps for the iPad</a>
 <ul>
 	<li>Enrollment (number of students): ___</li>
+	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 16 responses): ___ / 5.0</li> <!-- question 15 -->
+</ul>	
+</li>
+</ul>
+
+<h3>Fall 2014</h3>
+<ul>
+<li><a href="http://www.cs.tufts.edu/comp/20/" target="_blank">COMP 20: Web Programming</a>
+<ul>
+	<li>Enrollment (number of students): 77</li>
+	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 72 responses): / 5.0</li> <!-- question 15 -->
+</ul>	
+</li>
+<li><a href="http://www.cs.tufts.edu/comp/150MMD/" target="_blank">COMP 50-MMD: Mobile Medical Devices (cross-listed with Electrical Engineering)</a>
+<ul>
+	<li>Enrollment (number of students): 20</li>
 	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
 	<li>Overall Performance of Instructor (of 27 responses): / 5.0</li> <!-- question 15 -->
 </ul>	
 </li>
 <li><a href="http://www.cs.tufts.edu/comp/116/" target="_blank">COMP 116: Introduction to Computer Security</a>
 <ul>
-	<li>Enrollment (number of students): ___</li>
+	<li>Enrollment (number of students): 48</li>
 	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
 	<li>Overall Performance of Instructor (of 16 responses): ___ / 5.0</li> <!-- question 15 -->
 </ul>	
