Updated courses page

--- a/courses.html
+++ b/courses.html
@@ -52,12 +52,12 @@
 </li>
 <li><a href="http://www.cs.tufts.edu/comp/120/" target="_blank">COMP 120: Web Engineering</a>
 <ul>
-	<li>Enrollment (number of students): 20</li>
+	<li>Enrollment (number of students): ___</li>
 	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
 	<li>Overall Performance of Instructor (of 27 responses): / 5.0</li> <!-- question 15 -->
 </ul>	
 </li>
-<li><a href="http://www.cs.tufts.edu/comp/150ISW/" target="_blank">COMP 150-ISW: Music Apps for the iPad</a>
+<li><a href="http://www.cs.tufts.edu/comp/150ISW/" target="_blank">COMP 150-ISW: Music Apps on the iPad</a>
 <ul>
 	<li>Enrollment (number of students): ___</li>
 	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
@@ -157,7 +157,7 @@
 	<li>Overall Performance of Instructor: 3.78 / 5.0</li>
 </ul>
 </li>
-<li><a href="http://www.cs.tufts.edu/comp/150ISW/" target="_blank">COMP 150-ISW: Music Apps for the iPad</a>
+<li><a href="http://www.cs.tufts.edu/comp/150ISW/" target="_blank">COMP 150-ISW: Music Apps on the iPad</a>
 <ul>
 	<li>Enrollment (number of students): 15</li>
 	<li>Overall Course Rating: 3.25 / 5.0</li>
@@ -206,7 +206,7 @@
 	<li>Overall Performance of Instructor: 3.9 / 5.0</li>
 </ul>
 </li>
-<li>COMP 150-ISW: Music Apps for the iPad
+<li>COMP 150-ISW: Music Apps on the iPad
 <ul>
 	<li>Enrollment (number of students): 27</li>
 	<li>Overall Course Rating: 3.9 / 5.0</li>
