--- a/courses.html
+++ b/courses.html
@@ -47,21 +47,21 @@
 <ul>
 	<li>Enrollment (number of students): ___</li>
 	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
-	<li>Overall Performance of Instructor (of 72 responses): / 5.0</li> <!-- question 15 -->
+	<li>Overall Performance of Instructor (of ___ responses): / 5.0</li> <!-- question 15 -->
 </ul>	
 </li>
 <li><a href="http://www.cs.tufts.edu/comp/120/" target="_blank">COMP 120: Web Engineering</a>
 <ul>
 	<li>Enrollment (number of students): ___</li>
 	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
-	<li>Overall Performance of Instructor (of 27 responses): / 5.0</li> <!-- question 15 -->
+	<li>Overall Performance of Instructor (of ___ responses): / 5.0</li> <!-- question 15 -->
 </ul>	
 </li>
 <li><a href="http://www.cs.tufts.edu/comp/150ISW/" target="_blank">COMP 150-ISW: Music Apps on the iPad</a>
 <ul>
 	<li>Enrollment (number of students): ___</li>
 	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
-	<li>Overall Performance of Instructor (of 16 responses): ___ / 5.0</li> <!-- question 15 -->
+	<li>Overall Performance of Instructor (of ___ responses): ___ / 5.0</li> <!-- question 15 -->
 </ul>	
 </li>
 </ul>
@@ -71,22 +71,22 @@
 <li><a href="http://www.cs.tufts.edu/comp/20/" target="_blank">COMP 20: Web Programming</a>
 <ul>
 	<li>Enrollment (number of students): 77</li>
-	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
-	<li>Overall Performance of Instructor (of 72 responses): / 5.0</li> <!-- question 15 -->
+	<li>Overall Course Rating (of 33 responses): 4.39 / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 33 responses): 4.48 / 5.0</li> <!-- question 15 -->
 </ul>	
 </li>
 <li><a href="http://www.cs.tufts.edu/comp/150MMD/" target="_blank">COMP 50-MMD: Mobile Medical Devices (cross-listed with Electrical Engineering)</a>
 <ul>
 	<li>Enrollment (number of students): 20</li>
-	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
-	<li>Overall Performance of Instructor (of 27 responses): / 5.0</li> <!-- question 15 -->
+	<li>Overall Course Rating (of 4 responses): 4.25 / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 4 responses): 4.25 / 5.0</li> <!-- question 15 -->
 </ul>	
 </li>
 <li><a href="http://www.cs.tufts.edu/comp/116/" target="_blank">COMP 116: Introduction to Computer Security</a>
 <ul>
 	<li>Enrollment (number of students): 48</li>
-	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
-	<li>Overall Performance of Instructor (of 16 responses): ___ / 5.0</li> <!-- question 15 -->
+	<li>Overall Course Rating (of 25 responses): 4.20 / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 25 responses): 4.44 / 5.0</li> <!-- question 15 -->
 </ul>	
 </li>
 </ul>
