Added link to CTF Docker image under Projects

--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,7 @@
 
 <div class="container">
 <h2>Projects</h2>
+<p><a href="https://registry.hub.docker.com/u/mchow01/tufts-ctf-fall2014/" target="_blank">Docker image of my Capture the Flags (CTF) game for my "Introduction to Computer Security" fall 2014 class at Tufts University.</a></p>
 <p>(Since 2006) <a href="http://mbtamap.herokuapp.com" target="_blank">Closest MBTA Subway Station and Subway Schedule</a></p>
 <ul>
 	<li>iOS app source code: <a href="https://github.com/mchow01/MATransit-iOS" target="_blank">https://github.com/mchow01/MATransit-iOS</a></li>
