Redesigning personal website; removed DOS 386 theme

--- a/index.html
+++ b/index.html
@@ -9,34 +9,22 @@
 <meta name="keywords" content="ming chow, computer science, engineering, game development, web development, security, tufts university, MBTA" />
 <meta name="robots" content="index,follow" />
 <meta name="google-site-verification" content="NkkfQ8bOtWGA0T3CSg_6ACDZNMWoeVI7nwT-Agt5Lss" />
-<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
-<link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" />
-<link rel="stylesheet" href="css/jumbotron.css" type="text/css" />
+<link rel="stylesheet" href="css/default.css" />
 </head>
 
 <body>
-<div class="container-narrow">
-<div class="masthead">
-<ul class="nav nav-pills pull-left">
-<li><a href="about.html">About</a></li>
-<li><a href="courses.html">Courses @ Tufts</a></li>
-<li><a href="cv.pdf">CV</a></li>
-<li><a href="faq.html">FAQ</a></li>
-<li><a href="projects.html">Projects</a></li>
-<li><a href="talks/">Talks</a></li>
-<li><a href="mailto:mchow@cs.tufts.edu">Email</a></li>
-</ul>
-</div>
-<hr/>
-<div class="jumbotron">
 <h1>Ming Y. Chow</h1>
-<p></p>
-<p><a href="https://github.com/mchow01" class="btn btn-primary btn-large" target="_blank">GitHub</a> <a href="https://www.linkedin.com/in/mchow01" class="btn btn-primary btn-large" target="_blank">LinkedIn</a> <a href="https://www.twitter.com/0xmchow" class="btn btn-primary btn-large" target="_blank">Twitter</a></p>
-</div>
-<hr/>
-</div>
+<ul>
+<li><a href="about.html">About</a></li>
+<li><a href="cv.pdf">CV (PDF)</a></li>
+<li><a href="courses.html">Courses @ Tufts</a></li>
+<li><a href="talks/">Talks</a></li>
+<li><a href="faq.html">Frequently Asked Questions</a></li>
+<li><a href="https://github.com/mchow01" target="_blank">GitHub</a></li>
+<li><a href="https://www.linkedin.com/in/mchow01" target="_blank">LinkedIn</a></li>
+<li><a href="https://www.twitter.com/0xmchow" target="_blank">Twitter</a></li>
+</ul>
 
-<script src="js/bootstrap.min.js"></script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
