--- a/projects.html
+++ b/projects.html
@@ -8,9 +8,7 @@
 <meta name="description" content="Ming Chow's home page: projects" />
 <meta name="keywords" content="ming chow, computer science, engineering, game development, web development, security, tufts university, MBTA" />
 <meta name="robots" content="index,follow" />
-<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
-<link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" />
-<link rel="stylesheet" href="css/addendum.css" type="text/css" />
+<link rel="stylesheet" href="css/default.css" />
 </head>
 
 <body>
