--- a/talks/index.html
+++ b/talks/index.html
@@ -8,37 +8,10 @@
 <meta name="description" content="Ming Chow's home page: courses at Tufts Department of Computer Science" />
 <meta name="keywords" content="ming chow, computer science, engineering, game development, web development, security, tufts university, MBTA" />
 <meta name="robots" content="index,follow" />
-<link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css" />
-<link rel="stylesheet" href="../css/bootstrap-responsive.min.css" type="text/css" />
-<link rel="stylesheet" href="../css/addendum.css" type="text/css" />
+<link rel="stylesheet" href="../css/default.css" />
 </head>
 
 <body>
-<div class="navbar navbar-inverse navbar-fixed-top">
-<div class="navbar-inner">
-<div class="container">
-<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-</button>
-<a class="brand">Ming Y. Chow</a>
-<div class="nav-collapse collapse">
-<ul class="nav">
-<li><a href="../index.html">Home</a></li>
-<li><a href="../about.html">About</a></li>
-<li><a href="../courses.html">Courses @ Tufts</a></li>
-<li><a href="../cv.pdf">CV</a></li>
-<li><a href="../faq.html">FAQ</a></li>
-<li><a href="../projects.html">Projects</a></li>
-<li class="active"><a href="#">Talks</a></li>
-<li><a href="mailto:mchow@cs.tufts.edu">Email</a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-
 <div class="container">
 <h2>Talks</h2>
 
@@ -85,10 +58,12 @@ Use of the Internet in Fraud Investigations
 <li>John Hancock, Boston, MA, October 24, 2007.</li>
 <li>Greater Boston Chapter of the Association of Certified Fraud Examiners (ACFE), Boston, MA, September 21, 2007.</li>
 </ul>
-
 </div>
 
-<script src="js/bootstrap.min.js"></script>
+<div class="nav">
+<p><a href="../index.html">Home</a> | <a href="../about.html">About</a> | <a href="../cv.pdf">CV</a> | <a href="../courses.html">Courses @ Tufts</a> | <a href="#" class="active">Talks</a> | <a href="../faq.html">FAQ</a> | <a href="https://github.com/mchow01" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/mchow01" target="_blank">LinkedIn</a> | <a href="https://www.twitter.com/0xmchow" target="_blank">Twitter</a></p>
+</div>
+
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
