--- a/about.html
+++ b/about.html
@@ -9,39 +9,12 @@
 <meta name="description" content="Ming Chow's home page: personal information" />
 <meta name="keywords" content="ming chow, computer science, engineering, game development, web development, security, tufts university, MBTA" />
 <meta name="robots" content="index,follow" />
-<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
-<link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" />
-<link rel="stylesheet" href="css/addendum.css" type="text/css" />
+<link rel="stylesheet" href="css/default.css" />
 </head>
 
 <body>
-<div class="navbar navbar-inverse navbar-fixed-top">
-<div class="navbar-inner">
 <div class="container">
-<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-</button>
-<a class="brand">Ming Y. Chow</a>
-<div class="nav-collapse collapse">
-<ul class="nav">
-<li><a href="index.html">Home</a></li>
-<li class="active"><a href="#">About</a></li>
-<li><a href="courses.html">Courses @ Tufts</a></li>
-<li><a href="cv.pdf">CV</a></li>
-<li><a href="faq.html">FAQ</a></li>
-<li><a href="projects.html">Projects</a></li>
-<li><a href="talks/">Talks</a></li>
-<li><a href="mailto:mchow@cs.tufts.edu">Email</a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-
-<div class="container">
-<h2>Personal Information</h2>
+<h1>Ming Y. Chow - Personal Information</h1>
 
 <h3>Early Life and Education</h3>
 <p>I was born in Boston, Massachusetts. I spent most of my childhood in Medford, MA and later moved to Saugus, MA.  I graduated from Saugus High School in 1998.</p>
@@ -54,10 +27,12 @@
 
 <h3>Favorite Sport Teams</h3>
 <p>I have been following Manchester United F.C. since I was in high school (1995).  Ditto for the Miami Hurricanes and the Fighting Irish of Notre Dame in college football.  I also follow the New England Patriots and the Boston Celtics closely.</p>
-
 </div>
 
-<script src="js/bootstrap.min.js"></script>
+<div class="nav">
+<p><a href="index.html">Home</a> | <a href="#" class="active">About</a> | <a href="cv.pdf">CV</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="talks/">Talks</a> | <a href="faq.html">FAQ</a> | <a href="https://github.com/mchow01" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/mchow01" target="_blank">LinkedIn</a> | <a href="https://www.twitter.com/0xmchow" target="_blank">Twitter</a></p>
+</div>
+
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
