--- a/faq.html
+++ b/faq.html
@@ -8,39 +8,12 @@
 <meta name="description" content="Ming Chow's home page: frequently asked questions" />
 <meta name="keywords" content="ming chow, computer science, engineering, game development, web development, security, tufts university, MBTA" />
 <meta name="robots" content="index,follow" />
-<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
-<link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" />
-<link rel="stylesheet" href="css/addendum.css" type="text/css" />
+<link rel="stylesheet" href="css/default.css" />
 </head>
 
 <body>
-<div class="navbar navbar-inverse navbar-fixed-top">
-<div class="navbar-inner">
 <div class="container">
-<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-</button>
-<a class="brand">Ming Y. Chow</a>
-<div class="nav-collapse collapse">
-<ul class="nav">
-<li><a href="index.html">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="courses.html">Courses @ Tufts</a></li>
-<li><a href="cv.pdf">CV</a></li>
-<li class="active"><a href="#">FAQ</a></li>
-<li><a href="projects.html">Projects</a></li>
-<li><a href="talks/">Talks</a></li>
-<li><a href="mailto:mchow@cs.tufts.edu">Email</a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-
-<div class="container">
-<h2>Frequently Asked Questions</h2>
+<h2>Ming Y. Chow - Frequently Asked Questions</h2>
 
 <h3 id="interviewing">Can you give me some tips on preparing for a technical job interview?  Do you also have a list of typical interview questions?</h3>
 
@@ -108,10 +81,12 @@
 
 <h3>How did you get in computer security?</h3>
 <p>I took a course on software security with <a href="http://www.cigital.com/~gem/" target="_blank">Gary McGraw</a> at the USENIX Annual Conference in Boston in 2004.  I was also inspired by Professor Ed Felten (Princeton) at the same conference.</p>
-
 </div>
 
-<script src="js/bootstrap.min.js"></script>
+<div class="nav">
+<p><a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="cv.pdf">CV</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="talks/">Talks</a> | <a href="#" class="active">FAQ</a> | <a href="https://github.com/mchow01" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/mchow01" target="_blank">LinkedIn</a> | <a href="https://www.twitter.com/0xmchow" target="_blank">Twitter</a></p>
+</div>
+
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
