Updated CSS and Talks page

--- a/talks/index.html
+++ b/talks/index.html
@@ -13,7 +13,7 @@
 
 <body>
 <div class="container">
-<h2>Talks</h2>
+<h2>Ming Y. Chow - Talks</h2>
 
 <p><a href="SwiftAndSecurity.pdf">Swift and Security</a>. OWASP Boston Chapter Monthly Meeting, Akamai Technologies, 8 Cambridge Center, Cambridge, MA, December 3, 2014.</p>
 
