--- a/about.html
+++ b/about.html
@@ -13,9 +13,11 @@
 </head>
 
 <body>
-<div class="container">
+<div id="header">
 <h1>Ming Y. Chow - Personal Information</h1>
+</div>
 
+<div class="container">
 <h3>Early Life and Education</h3>
 <p>I was born in Boston, Massachusetts. I spent most of my childhood in Medford, MA and later moved to Saugus, MA.  I graduated from Saugus High School in 1998.</p>
 
@@ -29,8 +31,8 @@
 <p>I have been following Manchester United F.C. since I was in high school (1995).  Ditto for the Miami Hurricanes and the Fighting Irish of Notre Dame in college football.  I also follow the New England Patriots and the Boston Celtics closely.</p>
 </div>
 
-<div class="nav">
-<p><a href="index.html">Home</a> | <a href="#" class="active">About</a> | <a href="cv.pdf">CV</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="talks/">Talks</a> | <a href="faq.html">FAQ</a> | <a href="https://github.com/mchow01" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/mchow01" target="_blank">LinkedIn</a> | <a href="https://www.twitter.com/0xmchow" target="_blank">Twitter</a></p>
+<div id="nav">
+<p><a href="index.html">Home</a> | <strong>About</strong> | <a href="cv.pdf">CV</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="talks/">Talks</a> | <a href="faq.html">FAQ</a> | <a href="https://github.com/mchow01" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/mchow01" target="_blank">LinkedIn</a> | <a href="https://www.twitter.com/0xmchow" target="_blank">Twitter</a></p>
 </div>
 
 <script type="text/javascript">
