--- a/courses.html
+++ b/courses.html
@@ -12,8 +12,11 @@
 </head>
 
 <body>
-<div class="container">
+<div id="header">
 <h1>Ming Y. Chow - Courses @ Tufts</h1>
+</div>
+
+<div class="container">
 <h3>Spring 2015</h3>
 <ul>
 <li><a href="http://www.cs.tufts.edu/comp/20/" target="_blank">COMP 20: Web Programming</a>
@@ -306,8 +309,8 @@
 </ul>
 </div>
 
-<div class="nav">
-<p><a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="cv.pdf">CV</a> | <a href="#" class="active">Courses @ Tufts</a> | <a href="talks/">Talks</a> | <a href="faq.html">FAQ</a> | <a href="https://github.com/mchow01" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/mchow01" target="_blank">LinkedIn</a> | <a href="https://www.twitter.com/0xmchow" target="_blank">Twitter</a></p>
+<div id="nav">
+<p><a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="cv.pdf">CV</a> | <strong>Courses @ Tufts</strong> | <a href="talks/">Talks</a> | <a href="faq.html">FAQ</a> | <a href="https://github.com/mchow01" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/mchow01" target="_blank">LinkedIn</a> | <a href="https://www.twitter.com/0xmchow" target="_blank">Twitter</a></p>
 </div>
 
 <script type="text/javascript">
