--- a/faq.html
+++ b/faq.html
@@ -12,9 +12,11 @@
 </head>
 
 <body>
-<div class="container">
+<div id="header">
 <h1>Ming Y. Chow - Frequently Asked Questions</h1>
+</div>
 
+<div class="container">
 <h3 id="interviewing">Can you give me some tips on preparing for a technical job interview?  Do you also have a list of typical interview questions?</h3>
 
 <p>First things first, be yourself.  Here are some questions I, and many good interviewers, will ask:</p>
@@ -83,8 +85,8 @@
 <p>I took a course on software security with <a href="http://www.cigital.com/~gem/" target="_blank">Gary McGraw</a> at the USENIX Annual Conference in Boston in 2004.  I was also inspired by Professor Ed Felten (Princeton) at the same conference.</p>
 </div>
 
-<div class="nav">
-<p><a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="cv.pdf">CV</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="talks/">Talks</a> | <a href="#" class="active">FAQ</a> | <a href="https://github.com/mchow01" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/mchow01" target="_blank">LinkedIn</a> | <a href="https://www.twitter.com/0xmchow" target="_blank">Twitter</a></p>
+<div id="nav">
+<p><a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="cv.pdf">CV</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="talks/">Talks</a> | <strong>FAQ</strong> | <a href="https://github.com/mchow01" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/mchow01" target="_blank">LinkedIn</a> | <a href="https://www.twitter.com/0xmchow" target="_blank">Twitter</a></p>
 </div>
 
 <script type="text/javascript">
