Removed link to self on Talks page

--- a/talks/index.html
+++ b/talks/index.html
@@ -63,7 +63,7 @@ Use of the Internet in Fraud Investigations
 </div>
 
 <div id="nav">
-<p><a href="../index.html">Home</a> | <a href="../about.html">About</a> | <a href="../cv.pdf">CV</a> | <a href="../courses.html">Courses @ Tufts</a> | <a href="#" class="active">Talks</a> | <a href="../faq.html">FAQ</a> | <a href="https://github.com/mchow01" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/mchow01" target="_blank">LinkedIn</a> | <a href="https://www.twitter.com/0xmchow" target="_blank">Twitter</a></p>
+<p><a href="../index.html">Home</a> | <a href="../about.html">About</a> | <a href="../cv.pdf">CV</a> | <a href="../courses.html">Courses @ Tufts</a> | <strong>Talks</strong> | <a href="../faq.html">FAQ</a> | <a href="https://github.com/mchow01" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/mchow01" target="_blank">LinkedIn</a> | <a href="https://www.twitter.com/0xmchow" target="_blank">Twitter</a></p>
 </div>
 
 <script type="text/javascript">
