Updated course eval numbers for spring 2015

--- a/courses.html
+++ b/courses.html
@@ -21,23 +21,23 @@
 <ul>
 <li><a href="http://www.cs.tufts.edu/comp/20/" target="_blank">COMP 20: Web Programming</a>
 <ul>
-	<li>Enrollment (number of students): ___</li>
-	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
-	<li>Overall Performance of Instructor (of ___ responses): / 5.0</li> <!-- question 15 -->
+	<li>Enrollment (number of students): 109</li>
+	<li>Overall Course Rating (of 73 responses): 4.14 / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 73 responses): 4.38 / 5.0</li> <!-- question 15 -->
 </ul>	
 </li>
 <li><a href="http://www.cs.tufts.edu/comp/120/" target="_blank">COMP 120: Web Engineering</a>
 <ul>
-	<li>Enrollment (number of students): ___</li>
-	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
-	<li>Overall Performance of Instructor (of ___ responses): / 5.0</li> <!-- question 15 -->
+	<li>Enrollment (number of students): 59</li>
+	<li>Overall Course Rating (of 41 responses): 3.98 / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 41 responses): 4.20 / 5.0</li> <!-- question 15 -->
 </ul>	
 </li>
 <li><a href="http://www.cs.tufts.edu/comp/150ISW/" target="_blank">COMP 150-ISW: Music Apps on the iPad</a>
 <ul>
-	<li>Enrollment (number of students): ___</li>
-	<li>Overall Course Rating (of ___ responses): ___ / 5.0</li> <!-- question 5 -->
-	<li>Overall Performance of Instructor (of ___ responses): ___ / 5.0</li> <!-- question 15 -->
+	<li>Enrollment (number of students): 21</li>
+	<li>Overall Course Rating (of 15 responses): 4.67 / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 15 responses): 4.53 / 5.0</li> <!-- question 15 -->
 </ul>	
 </li>
 </ul>
